--- a/ResSystem/templates/basetemplate.html
+++ b/ResSystem/templates/basetemplate.html
@@ -58,7 +58,7 @@
     
 
 
-          {% if user.get_username  == 'admin' %}
+          {% if user.get_username  == 'june' %}
           <li><a href="{% url 'ResSystem:addroom_view' %}" >Add Room</a></li>
           <li><a href="{% url 'ResSystem:room_view' %}" >Dashboard</a></li>
           <li><a href="{% url 'ResSystem:logout_view' %}" >Logout</a></li>
